--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.2",
+    "react-native-splash-screen": "^3.2.0",
     "reactotron-react-native": "^5.0.0"
   },
   "devDependencies": {
